Improved instance selector. Fixed KeyName wrapping.

--- a/client/content/css/main.css
+++ b/client/content/css/main.css
@@ -121,7 +121,7 @@ div.tab-pane.ng-scope.active {
 }
 
 div.popover {
-    max-width:800px;
+    max-width:600px;
 }
 
 .gold-mark {
